--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Database connection properties
-spring.datasource.url=jdbc:mysql://localhost:3306/tintucdb?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://35.194.247.109:3306/tintucdb?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username:root
-spring.datasource.password:ntgspkt2604
+spring.datasource.password:123
 
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 # Statement logging and statistics
